--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.3",
     "typescript": "^5"
   }
 }
